--- a/estilos/styles.css
+++ b/estilos/styles.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto+Condensed:wght@700&family=Roboto:wght@400;500&display=swap");
+.extendButton {
+  border-radius: 3em; }
+
 * {
   margin: 0;
   padding: 0; }
@@ -57,11 +60,11 @@ p {
   font-size: 0.9rem;
   color: #171717; }
 
-.button {
+.button, .extendButton {
   background: #f96706;
   color: #e9e9e9;
   cursor: pointer; }
-  .button:hover {
+  .button:hover, .extendButton:hover {
     background: #777475;
     color: #e9e9e9;
     cursor: pointer; }
@@ -97,7 +100,6 @@ p {
   margin: 0;
   padding: 2rem;
   display: flex;
-  flex-direction: row;
   align-content: space-between;
   align-items: center;
   justify-content: space-between; }
