--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "_vars.scss";
 @import "_fonts.scss";
+@import "_mixins.scss";
 @import "_commons.scss"; 
 @import "_navbar.scss";
 @import "_main.scss";
